crates/cli/tests/snapshots/tui_dashboard_test__dashboard_empty.snap
---
source: crates/cli/tests/tui_dashboard_test.rs
expression: output
---
qinAegis — AI Testing TUI                                                       
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│Projects: 0                                                                   │
│                                                                              │
│[1] Explore    — AI explore a URL                                             │
│[2] Generate   — Generate test cases                                          │
│[3] Run Tests  — Execute test suite                                           │
│[4] Settings  — Configure LLM & Sandbox                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
q: quit | 1-4: select | Enter: confirm
